--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+          "app/Http/Helpers/ImagesHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
